--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "vitest"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "hono": "^4.10.4",
+    "next": "16.0.1",
     "react": "19.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20.19.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "vitest": "^4.0.6",
+    "wrangler": "^4.45.3"
   }
 }
